updated su-goals and su-care-review mutli view styles. increased  input width on edit view edit description input. included commoon multi-view styles in common-styles.

--- a/src/pages/care-plan/su-goals/su-goals-edit-view.html
+++ b/src/pages/care-plan/su-goals/su-goals-edit-view.html
@@ -91,6 +91,9 @@
       float:right;
       height:100%;
     }
+    #descriptionEdit paper-input{
+      width: calc(100% - 10px);
+    }
     #descriptionEditButton{
       color:#FFFFFF;
     }
