updated clickable multi-card title to reflect link. updated su-risk to use same styles as other mutli-view pages. updated guuey-slider to remove margin-left and right.

--- a/src/elements/guuey-slider/guuey-slider.html
+++ b/src/elements/guuey-slider/guuey-slider.html
@@ -35,6 +35,10 @@
         padding-bottom:15px;
         --paper-slider-markers-color:transparent;
       }
+      #slider::shadow #sliderContainer{
+        margin-left:0;
+        margin-right:0;
+      }
       .spectrumDescriptor{
         text-transform:uppercase;
         margin:0;
