updated logout button dropdown with new guuey-account-display element.

--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -37,6 +37,7 @@
 <link rel="import" href="elements/guuey-bug-report/guuey-bug-report.html" />
 <link rel="import" href="elements/media-queries/media-queries.html" />
 <link rel="import" href="elements/guuey-notification/guuey-notification.html" />
+<link rel="import" href="elements/guuey-account-display/guuey-account-display.html" />
 
 <link rel="import" href="behaviors/shell-resize-behavior.html" />
 
