--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -289,6 +289,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       .multiViewCard{
         width:100%;
+        padding-top:40px;
       }
       /* misc */
       .bad{
